# ComfyUI_Adforge

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  __init__.py  audio_preview.py  geracao_audio_node_custom.json  geracao_video.json  pyproject.toml  requirements.txt  requirements_nodes_custom.txt
.github/: ISSUE_TEMPLATE.md  pull_request_template.md
.github/workflows/: on_pull.yml
docs/API Nodes/: GenAI on Vertex AI API.md
src/comfyui-adforge/: nodes.py
src/comfyui_adforge/: documentation.py  nodes.py  settings.py  utils.py
src/comfyui_adforge/api_nodes/video_generation/: vertex_image_to_video.py
src/comfyui_adforge/tools/: load_video_gcs.py
src/comfyui_adforge/video_generation/: preview_video.py  vertex_extend_video.py  vertex_first_last_frame_to_video.py  vertex_image_to_video.py  vertex_text_to_video.py  vertex_video_to_video.py  vertex_video_with_reference.py
tests/: __init__.py  conftest.py  test_adforge.py
