[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui_adforge"
version = "0.0.3"
description = "Creditas' Ad Creation Toolkit for ComfyUI"
authors = [
  {name = "creditas", email = "martech1@creditas.com"}
]
readme = "README.md"
license = {text = "GNU General Public License v3"}
requires-python = ">=3.12"
classifiers = []
dependencies = [
  "google-genai>=1.48.0",
  "google-cloud-storage>=2.10.0",
  "python-dotenv>=1.2.1",
  "pydantic-settings>=2.11.0",
]

[dependency-groups]
dev = [
  "comfy-cli>=1.5.3",
  {include-group = "lint"},
  {include-group = "test"},
]
test = [
  "pytest==9.0.0",
  "pytest-cov ==7.0.0"
]
lint = [
  "mypy",
  "flake8 ==7.3.0",
  "flake8-pyproject ==1.2.3",
  "autoflake ==2.3.1",
  "black ==25.9.0",
  "isort ==7.0.0",
  "pre-commit ==4.4.0"
]


[tool.uv]
required-version="0.9.9"

[project.urls]
Repository = "https://github.com/Creditas-labs/ComfyUI_Adforge"
BugTracker = "https://github.com/Creditas-labs/ComfyUI_Adforge/issues"
Documentation = "https://github.com/Creditas-labs/ComfyUI_Adforge/wiki"


[tool.comfy]
PublisherId = "creditas"
DisplayName = "Creditas' Adforge"
Icon = ""
Tags = []
Repository = "https://github.com/Creditas-labs/ComfyUI_Adforge"

includes = []

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.pytest.ini_options]
minversion = "9.0.0"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = [
    "src"
]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.coverage.xml]
output = ".coverage-reports/coverage.xml"

[tool.isort]
profile = "black"
force_sort_within_sections = true
skip = [".venv"]

[tool.black]
line-length = 120
exclude = '\.venv'

[tool.flake8]
max-line-length = 120
count = true
exclude = [".venv"]

[tool.autoflake]
in-place = true
recursive = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-unused-variables = true
remove-duplicate-keys = true

[tool.mypy]
files = "src"

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"
